--- a/filebeat.yaml
+++ b/filebeat.yaml
@@ -48,7 +48,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: filebeat-kubeadm-config
-  namespace: kube-system
+  namespace: elastic-system
   labels:
     k8s-app: filebeat
 rules:
@@ -79,7 +79,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: filebeat
-    namespace: kube-system
+    namespace: elastic-system
 roleRef:
   kind: Role
   name: filebeat
@@ -92,7 +92,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: filebeat
-    namespace: kube-system
+    namespace: elastic-system
 roleRef:
   kind: Role
   name: filebeat-kubeadm-config
